--- a/src/css/base/reset.css
+++ b/src/css/base/reset.css
@@ -48,8 +48,33 @@ img{
     image-rendering: optimizeQuality;
 }
 
+p{
+    font-size: var(--font-size-2);
+    line-height: calc(var(--font-size-3) * 1.5);
+}
+
 a{
     text-decoration:none;
     color: var(--text-primary);
     
+}
+
+@media screen and (max-width: 768px) {
+
+    h1{
+        font-size: var(--font-size-6);
+        line-height: calc(var(--font-size-6) * 1.5);
+    }
+
+    h2{
+        font-size: var(--font-size-3);
+        line-height: calc(var(--font-size-3) * 1.5);
+    }
+
+    p{
+        font-size: var(--font-size-1);
+        line-height: calc(var(--font-size-2) * 1.5);
+    }
+    
+
 }
