--- a/src/css/utils/spacing.css
+++ b/src/css/utils/spacing.css
@@ -37,3 +37,11 @@
 .u-p-8{
     padding: var(--size-8);
 }
+
+@media screen and (max-width: 768px) {
+
+    .u-mob-gap-4{
+        gap: var(--gap-4);
+    }
+
+}
