--- a/src/css/utils/spacing.css
+++ b/src/css/utils/spacing.css
@@ -40,6 +40,10 @@
 
 @media screen and (max-width: 768px) {
 
+    .u-mob-gap-2{
+        gap: var(--gap-2);
+    }
+
     .u-mob-gap-4{
         gap: var(--gap-4);
     }
