--- a/src/css/utils/dimensions.css
+++ b/src/css/utils/dimensions.css
@@ -60,6 +60,10 @@
 
 /* HEIGHT  */
 
+.u-min-h-0{
+    min-height: 0px;
+}
+
 .u-h-100{
     height: 100%;
 }
@@ -98,3 +102,10 @@
     aspect-ratio: 1 / 1;
 }
 
+@media screen and (max-width: 1024px) {
+
+    .u-tab-max-w-unset{
+        max-width: unset;   
+    }
+
+}
