--- a/src/css/atoms/inputs.css
+++ b/src/css/atoms/inputs.css
@@ -49,7 +49,8 @@ textarea:focus-visible{
 .input,
 .select,
 .textarea{
-    border: unset;
+    border-radius: var(--radius-1);
+    border: 1px solid var(--color-primary-opacity-10);
     background-color: var(--color-primary-opacity-10);
     font-family: var(--ff-primary);
 }
