--- a/src/css/atoms/inputs.css
+++ b/src/css/atoms/inputs.css
@@ -65,7 +65,7 @@ textarea:focus-visible{
     background-color: var(--color-primary-opacity-4);
     border: 2px dashed var(--color-primary-opacity-40);
     transition: var(--transition-ease);
-    min-height: 128px;
+    min-height: 160px;
     *{
         cursor: pointer; 
     }
@@ -107,7 +107,7 @@ textarea:focus-visible{
 }
 
 
-.form-row-upload #preview{  
+.form-row-upload :where(#preview,#edit-preview){
     width: 100%;
     height: 100%;
     object-fit: cover;
