--- a/src/css/atoms/tabs.css
+++ b/src/css/atoms/tabs.css
@@ -1,15 +1,19 @@
 lt-tabs{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    height: 100%;
+    gap: var(--size-4);
 }
 
 .lt-tab-header {
     --tab-header-bg-color:var(--color-primary-opacity-20);
-    --tab-header-padding: var(--size-1);
+    --tab-header-padding: var(--size-2);
     border-bottom: 1px solid var(--border-color);
     background-color: var(--tab-header-bg-color);
     padding: var(--tab-header-padding);
     display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 
@@ -21,16 +25,17 @@ lt-tabs{
     cursor: pointer;
     color: var(--text-secondary);
     min-width: 160px;
-    justify-content: center;
-    text-transform: uppercase;
     font-size: var(--font-size-1);
+    border-left: 2px solid transparent;
     /* flex: 1 1 0; */
     span {
         white-space: nowrap;
     }
     &.active{
-        background-color: var(--color-primary);
+        background-color: var(--color-primary-opacity-20);
+        border-left: 2px solid var(--color-primary);
         color: var(--text-primary);
+        font-weight: bold;
     }
 }
 
@@ -42,4 +47,9 @@ lt-tabs{
 
 .lt-tab-panel.active {
     display: flex;
+}
+
+.lt-tab-content{
+    width: 100%;
+    height: 100%;
 }
