--- a/src/css/layouts/tables.css
+++ b/src/css/layouts/tables.css
@@ -10,6 +10,10 @@
     font-weight: unset;
 }
 
+.table th{
+    text-transform: capitalize;
+}
+
 .table th,
 .table td{
     padding: var(--size-2);
